# sbndPRISM

./: README.md  ana_prism.C
result/: README.md
result/reco/nomec/: nomec_mean_05_sigma_02.root  nomec_mean_06_sigma_02.root  nomec_mean_07_sigma_02.root  nomec_mean_08_sigma_02.root  nomec_mean_09_sigma_02.root
result/reco/nonqe/: nonqe_mean_05_sigma_02.root  nonqe_mean_06_sigma_02.root  nonqe_mean_07_sigma_02.root  nonqe_mean_08_sigma_02.root  nonqe_mean_09_sigma_02.root
result/true/nomec/: t_nomec_mean_05_sigma_02.root  t_nomec_mean_06_sigma_02.root  t_nomec_mean_07_sigma_02.root  t_nomec_mean_08_sigma_02.root  t_nomec_mean_09_sigma_02.root
result/true/nonqe/: t_nonqe_mean_05_sigma_02.root  t_nonqe_mean_06_sigma_02.root  t_nonqe_mean_07_sigma_02.root  t_nonqe_mean_08_sigma_02.root  t_nonqe_mean_09_sigma_02.root
sbnPRISM/: CMakeLists.txt  README.md  sbnPRISMSelection.cxx  sbnPRISMSelection.h  sbnPRISMTools.cxx  sbnPRISMTools.h
